--- a/t3.css
+++ b/t3.css
@@ -5,10 +5,65 @@
 
 }
 
-#game-area {
+body {
+    background-color: black;
+    background-image: radial-gradient(
+      rgba(0, 150, 0, 0.75), black 120%
+    );
+    height: 100vh;
+    color: white;
+    font-family: monospace;
+    text-shadow: 0 0 5px #C8C8C8;
+  }
+
+#square {
     margin: 0 auto;
     width: 450px;
-    display:grid;
+    height: 450px;
+    border-style: solid;
+    border-width: 1px;
+}
+
+#outcome-overlay {
+    display: none;
+    height: 450px;
+    width: 450px;
+    position: absolute;
+    z-index: 1;
+    background-color: black;
+    opacity: 0.5;
+}
+
+#game-menu {
+    margin: 0 auto;
+    width: 450px;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.menu-button {
+    display: flex;
+    font-size: 20px;
+}
+
+
+#game-area {
+    display:none;
+    margin: 0 auto;
+    width: 450px;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
+    border-style: solid;
+    border-width: 1px;
+}
+
+.cell{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
 }
