--- a/t3.css
+++ b/t3.css
@@ -16,8 +16,13 @@ body {
     text-shadow: 0 0 5px #C8C8C8;
   }
 
+pre {
+    font-size: 5px;
+    text-align: center;
+}
+
 #scanline-overlay {
-    background: repeating-linear-gradient(transparent, transparent 2px, black 3px, black 3px);
+    background: repeating-linear-gradient(transparent, transparent 3px, black 4px, black 4px);
     position: fixed;
     bottom: 0;
     right: 0;
@@ -37,8 +42,8 @@ body {
 
 #outcome-overlay {
     display: none;
-    height: 450px;
-    width: 450px;
+    height: 100%;
+    width: 100%;
     position: absolute;
     z-index: 1;
     background-color:rgba(0,0,0,0.5);
@@ -52,15 +57,19 @@ body {
 #game-menu {
     margin: 0 auto;
     height: 100%;
-    width: 450px;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center
 }
 
 #game-menu>* {
-    background-color:rgba(0,0,0,0.5);
-    padding: 20px;
+    border-radius: 10px;
+    background-color:rgba(0,0,0,0.3);
+    height: 160px;
+    width: 160px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #game-menu>*>p {
@@ -79,7 +88,7 @@ body {
 #game-area {
     display:none;
     margin: 0 auto;
-    width: 450px;
+    width: 100%;
     grid-template-columns: repeat(3, 150px);
     grid-template-rows: repeat(3, 150px);
     border-style: solid;
